# Sourcetrail

./: .clang-format  .clang-tidy  .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/export_UML/: CMakeLists.txt  main.cpp
src/app/gui/: CMakeLists.txt  main.cpp
src/app/indexer/: main.cpp
src/benchmark/: CMakeLists.txt  UtilityStringBenchmark.cpp
src/functionality/: CMakeLists.txt  indexerFuncTest.py
src/indexer/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  precompiled.hpp
src/lib/app/: Application.cpp  Application.h  LanguagePackage.h  LanguagePackageManager.cpp  LanguagePackageManager.h
src/lib/app/paths/: AppPath.cpp  AppPath.h  AppPath.hpp  ResourcePaths.cpp  ResourcePaths.h  ResourcePaths.hpp  UserPaths.cpp  UserPaths.h
src/lib/component/: Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentManager.cpp  ComponentManager.h  NetworkFactory.cpp  NetworkFactory.h  Tab.cpp  Tab.h  TabId.cpp  TabId.h  TabId.hpp
src/lib/component/controller/: ActivationController.cpp  ActivationController.h  BookmarkController.cpp  BookmarkController.h  CodeController.cpp  CodeController.h  Controller.cpp  Controller.h  CustomTrailController.cpp  CustomTrailController.h  ErrorController.cpp  ErrorController.h  GraphController.cpp  GraphController.h  IDECommunicationController.cpp  IDECommunicationController.h  RefreshController.cpp  RefreshController.h  ScreenSearchController.cpp  ScreenSearchController.h  SearchController.cpp  SearchController.h  (+10 more)
src/lib/data/: DefinitionKind.cpp  DefinitionKind.h  ErrorCountInfo.h  ErrorFilter.h  ErrorInfo.h  GroupType.cpp  GroupType.h  HierarchyCache.cpp  HierarchyCache.h  NodeKind.cpp  NodeKind.h  NodeType.cpp  NodeType.h  NodeTypeSet.cpp  NodeTypeSet.h  TaskCleanStorage.cpp  TaskCleanStorage.h  TaskFinishParsing.cpp  TaskFinishParsing.h  TaskInjectStorage.cpp  TaskInjectStorage.h  TaskMergeStorages.cpp  TaskMergeStorages.h
src/lib/project/: Project.cpp  Project.h  RefreshInfo.h  RefreshInfoGenerator.cpp  RefreshInfoGenerator.h  SourceGroup.cpp  SourceGroup.h  SourceGroupCustomCommand.cpp  SourceGroupCustomCommand.h  SourceGroupFactory.cpp  SourceGroupFactory.h  SourceGroupFactoryModule.h  SourceGroupFactoryModuleCustom.cpp  SourceGroupFactoryModuleCustom.h
src/lib/settings/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettingsPrefiller.cpp  ApplicationSettingsPrefiller.h  ColorScheme.cpp  ColorScheme.h  LanguageType.cpp  LanguageType.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  Settings.h
src/lib/utility/: ApplicationArchitectureType.h  ConfigManager.cpp  ConfigManager.h  LowMemoryStringMap.h  Optional.h  Optional.hpp  OrderedCache.h  OsType.h  Property.h  Property.hpp  ScopedFunctor.cpp  ScopedFunctor.h  ScopedFunctor.hpp  ScopedSwitcher.h  SingleValueCache.h  Status.h  TimeStamp.cpp  TimeStamp.h  TimeStamp.hpp  Tree.h  UnorderedCache.h  Version.cpp  Version.h  tracing.cpp  tracing.h  types.h  types.hpp  utility.cpp  utility.h  utilityLibrary.h  utilityUuid.cpp  utilityUuid.h  utilityWindows.cpp  utilityWindows.h  utilityXml.cpp  utilityXml.h  utilityXml.hpp  utility_impl.h
src/lib_cxx/: CMakeLists.txt  LanguagePackageCxx.cpp  LanguagePackageCxx.h
src/lib_cxx/project/: SourceGroupCxxCdb.cpp  SourceGroupCxxCdb.h  SourceGroupCxxCodeblocks.cpp  SourceGroupCxxCodeblocks.h  SourceGroupCxxEmpty.cpp  SourceGroupCxxEmpty.h  SourceGroupFactoryModuleCxx.cpp  SourceGroupFactoryModuleCxx.h  utilitySourceGroupCxx.cpp  utilitySourceGroupCxx.h
src/lib_cxx/utility/: CompilationDatabase.cpp  CompilationDatabase.h  IncludeDirective.cpp  IncludeDirective.h  IncludeProcessing.cpp  IncludeProcessing.h
src/lib_gui/: CMakeLists.txt
src/lib_gui/platform_includes/: includesLinux.h  includesMac.h  includesWindows.h
src/lib_gui/qt/: QtApplication.cpp  QtApplication.h  QtCoreApplication.cpp  QtCoreApplication.h
src/lib_gui/utility/: utilityApp.cpp  utilityApp.h  utilityPathDetection.cpp  utilityPathDetection.h
src/lib_java/: LanguagePackageJava.cpp  LanguagePackageJava.h
src/lib_java/project/: SourceGroupFactoryModuleJava.cpp  SourceGroupFactoryModuleJava.h  SourceGroupJava.cpp  SourceGroupJava.h  SourceGroupJavaEmpty.cpp  SourceGroupJavaEmpty.h  SourceGroupJavaGradle.cpp  SourceGroupJavaGradle.h  SourceGroupJavaMaven.cpp  SourceGroupJavaMaven.h
src/lib_java/utility/: utilityGradle.cpp  utilityGradle.h  utilityJava.cpp  utilityJava.h  utilityMaven.cpp  utilityMaven.h
src/lib_python/project/: SourceGroupFactoryModulePython.cpp  SourceGroupFactoryModulePython.h  SourceGroupPythonEmpty.cpp  SourceGroupPythonEmpty.h
src/lib_utility/: CMakeLists.txt
src/lib_utility/utility/: TextCodec.cpp  TextCodec.h  utilityString.cpp  utilityString.h
src/test/: CMakeLists.txt  CommandlineTestSuite.cpp  ComponentFactoryTestSuite.cpp  ConfigManagerTestSuite.cpp  CxxIncludeProcessingTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp  FileManagerTestSuite.cpp  FilePathFilterTestSuite.cpp  FilePathTestSuite.cpp  FileRegisterTestSuite.cpp  FileSystemTestSuite.cpp  FileTreeTestSuite.cpp  GraphTestSuite.cpp  HierarchyCacheTestSuite.cpp  JavaIndexSampleProjectsTestSuite.cpp  JavaParserTestSuite.cpp  LogManagerTestSuite.cpp  LogMessageTestSuite.cpp  LoggerTestSuite.cpp  LowMemoryStringMapTestSuite.cpp  MatrixBaseTestSuite.cpp  MatrixDynamicBaseTestSuite.cpp  MessageQueueTestSuite.cpp  NetworkProtocolHelperTestSuite.cpp  PythonIndexerTestSuite.cpp  RefreshInfoGeneratorTestSuite.cpp  ScopedFunctorTestSuite.cpp  SearchIndexTestSuite.cpp  SettingsMigratorTestSuite.cpp  SettingsTestSuite.cpp  SharedMemoryTestSuite.cpp  SourceGroupTestSuite.cpp  SourceLocationCollectionTestSuite.cpp  SqliteBookmarkStorageTestSuite.cpp  SqliteIndexStorageTestSuite.cpp  StatusTestSuite.cpp  StorageTestSuite.cpp  TaskGroupParallelTestSuite.cpp  TaskLambdaTestSuite.cpp  (+16 more)
src/test/functionality/: CMakeLists.txt  ExportUMLTest.cpp
src/test/helper/: Mocks.h  TestFileRegister.cpp  TestFileRegister.h  TestFileUtilities.h  TestStorage.h
(+1009 files in other folders)
